2006-10-02  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIASave), (VIARestore):

	Moved a line to after declarations for picky gcc-2.96,
	tweaked comments and debugging lines.

2006-09-27  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* unichrome/via_memory.c:

	Don't include drm headers in non-dri build.
	
2006-09-25  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/Makefile.am:

	Mention the overall revision number in the log, not just
	the driver code revision.

2006-09-24  Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>

	* libxvmc/viaLowLevel.c: (initXvMCLowLevel):
	* libxvmc/viaLowLevelPro.c: (initXvMCLowLevel):
	* libxvmc/viaXvMC.c: (XvMCSetAttribute):

	Fix a mutex unlocking issue (Luc Verhaegen).
	Have the lowlevel drivers check for the correct chipid.
	
2006-09-24  Michal Ludvig  <michal-at-logix-dot-cz>

	* man/Makefile.am:

	Fix man-page symlink for out-of-tree build (trac ticket #50).

2006-09-22  Jon Nettleton  <jon-dot-nettleton-at-gmail-dot-com>

	* unichrome/via_drmclient.h:

	include stdint.h instead of re-typedefining CARD32

2006-09-17  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_driver.c: (VIASave):

	Put in a few extra debugging lines.

2006-09-05  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_swov.c:

	Comment and whitespace tweaks.

2006-09-05  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_id.c:

	Add an ID (trac ticket #67), note identical numbers, remove
	a duplicate, remove obsolete unknown, remove trailing tab.

2006-08-27  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_id.c:

	Textual tweaks.

2006-08-27  Benno Schulenberg  <bensberg-at-justemail-dot-net>

	* unichrome/via_dri.c: (VIADRIAgpInit):

	Rearrange declarations to fix compilation problem with gcc-2.96,
	reported by Nikolai V. Ivanyushin <nvi-at-sven-dot-ru>.
