@@ -1,3 +1,9 @@
+2006-10-03 Thomas Hellstrom  <thomas-at-tungstengraphics-dot-com>
+
+	* unichrome/via_video.c: (viaPutImage):
+
+	Removed some stray debug messages.
+
 2006-10-02  Benno Schulenberg  <bensberg-at-justemail-dot-net>
 
 	* unichrome/via_driver.c: (VIASave), (VIARestore):
